--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,27 @@ li {
   list-style-type: none;
 }
 
+.matchBorder{
+    display: block;
+    border: 4px solid;
+    border-color:blue;
+    margin: 4px;
+    background-color: tomato;
+    clear:both;
+}
+.matchBorder .matchId{
+  display: inline-block;
+  text-align: center;
+}
+.matchBorder .matchRedSide{
+    display: inline-block;
+float:left;
+}
+.matchBorder .matchBlueSide{
+    display: inline-block;
+float:right;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
