--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,13 @@ body {
 .border{
   display: inline-block;
   border: 2px solid;
-margin: 2px;
+  margin: 2px;
+  width: 250px;
+  height: 300px;
+  padding: 5px;
+  overflow-wrap: break-word;
+  overflow:hidden;
+
 }
 
 li {
@@ -65,32 +71,38 @@ li {
 }
 
 .redSide {
-  background-color:#ba000d;
-  width: 49%;			
+  background-color: #FF4136;
+  width: 46%;			
   z-index: 1;
-  transform-origin: 0% 50%;
+  transform-origin: 0% 100%;
   transform: perspective(300px) rotateX(-30deg);
-
+  color: #f1f1f1;
+  box-shadow: 5px 18px 46px 5px #222;
 }
-  /* .redSide > * { transform: skew(20deg); } */
+.redSide > * {    
+  transform: none;   
+  transform-origin: none
+}
 
 
 
 .blueSide {
  
-  background-Color: #002984;
-  width: 49%;
+  background-Color: #0074D9;
+  width: 48%;
   overflow: auto;
   height: 100%;
-
-
+  color: #f1f1f1;
   transform: perspective(300px) rotateX(30deg);
-  transform-origin: 100% 50%;
+  transform-origin: 100% 0%;
 
-								
+               
+box-shadow: 5px 18px 46px 5px #222;
+
 }
 
-/* .blueSide > * { transform: skew(20deg); } */
+
+ .blueSide > * {    transform: none;   transform-origin: none}
 
 
 .matchBorder .matchId{
@@ -116,7 +128,7 @@ float:right;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 90%;
+  
   
 }
 
@@ -157,7 +169,29 @@ margin-right: 20%;
 }
 
 .create-char-button {
-  width: 100px;
+  width: 80px;
   padding: 20px;
-  background-color: aqua;
+  background-color: #FFFFFF;
+  height: 50px;
+  align-items: center;
+    display: flex;
+    font-size: 15px;
+    font-weight: 500;
+    justify-content: center;
+    padding: 0;
+    position: relative;
+    z-index: 1;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
+    height: 45px;
+    margin-right: 40px;
+    transform: translateY(-1px);
+    transition: -webkit-box-shadow .3s cubic-bezier(.25,.25,.315,1.35),-webkit-transform .1s linear;
+    transition: box-shadow .3s cubic-bezier(.25,.25,.315,1.35),transform .1s linear;
+    width: 250px;
+    
 }
+
+
+  
+
